befuddled but working it out

--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <script src="./index.js" defer></script>
+    <title>Workshop 21: Party Planner</title>
 </head>
+
 <body>
-    
+    <h1>Party Planner</h1>
+
+    <section>
+        <form id="new-party-form">
+            <label>
+                Name
+                <input type="text" name="name" />
+            </label>
+            <label>
+                Description
+                <input type="text" name="description" />
+            </label>
+            <label>
+                Date
+                <input type="date" name="date" />
+            </label>
+            <label>
+                Location
+                <input type="text" name="location" />
+            </label>
+
+        </form>
+        <button class="new-party-btn">Add Party</button>
+    </section>
+
+    <div id="party-container"></div>
 </body>
+
 </html>
